Addressing Alignment Issue

--- a/src/ReverseTranslation/ReverseTranslation.scss
+++ b/src/ReverseTranslation/ReverseTranslation.scss
@@ -26,7 +26,6 @@
         border: none;
         padding: 0 !important;
         text-decoration: none;
-        white-space: nowrap;
         cursor: pointer;
         color: var(--autoql-vanilla-accent-color) !important;
 
